@@ -31,12 +31,16 @@ import org.graylog2.indexer.indices.TooManyAliasesException;
 import org.graylog2.indexer.indices.jobs.SetIndexReadOnlyAndCalculateRangeJob;
 import org.graylog2.indexer.ranges.IndexRange;
 import org.graylog2.indexer.ranges.IndexRangeService;
+import org.graylog2.notifications.Notification;
+import org.graylog2.notifications.NotificationService;
 import org.graylog2.plugin.system.NodeId;
 import org.graylog2.shared.system.activities.Activity;
 import org.graylog2.shared.system.activities.ActivityWriter;
 import org.graylog2.system.jobs.SystemJob;
 import org.graylog2.system.jobs.SystemJobConcurrencyException;
 import org.graylog2.system.jobs.SystemJobManager;
+import org.joda.time.DateTime;
+import org.joda.time.DateTimeZone;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -55,6 +59,7 @@ import static com.google.common.base.Strings.isNullOrEmpty;
 import static java.util.Objects.requireNonNull;
 import static org.graylog2.audit.AuditEventTypes.ES_WRITE_INDEX_UPDATE;
 import static org.graylog2.indexer.indices.Indices.checkIfHealthy;
+import static org.graylog2.shared.utilities.StringUtils.f;
 
 public class MongoIndexSet implements IndexSet {
     public static final String SEPARATOR = "_";
@@ -63,6 +68,7 @@ public class MongoIndexSet implements IndexSet {
     // TODO 3.0: Remove this in 3.0, only used for pre 2.2 backwards compatibility.
     public static final String RESTORED_ARCHIVE_SUFFIX = "_restored_archive";
     public static final String WARM_INDEX_INFIX = "warm_";
+    private static final String WARM_INDEX_INFIX_WITH_SEPARATOR = SEPARATOR + WARM_INDEX_INFIX;
     private static final Logger LOG = LoggerFactory.getLogger(MongoIndexSet.class);
     private final IndexSetConfig config;
     private final String writeIndexAlias;
@@ -76,6 +82,7 @@ public class MongoIndexSet implements IndexSet {
     private final SystemJobManager systemJobManager;
     private final SetIndexReadOnlyAndCalculateRangeJob.Factory jobFactory;
     private final ActivityWriter activityWriter;
+    private final NotificationService notificationService;
 
     @Inject
     public MongoIndexSet(@Assisted final IndexSetConfig config,
@@ -85,7 +92,7 @@ public class MongoIndexSet implements IndexSet {
                          final AuditEventSender auditEventSender,
                          final SystemJobManager systemJobManager,
                          final SetIndexReadOnlyAndCalculateRangeJob.Factory jobFactory,
-                         final ActivityWriter activityWriter
+                         final ActivityWriter activityWriter, NotificationService notificationService
     ) {
         this.config = requireNonNull(config);
         this.writeIndexAlias = config.indexPrefix() + SEPARATOR + DEFLECTOR_SUFFIX;
@@ -96,6 +103,7 @@ public class MongoIndexSet implements IndexSet {
         this.systemJobManager = requireNonNull(systemJobManager);
         this.jobFactory = requireNonNull(jobFactory);
         this.activityWriter = requireNonNull(activityWriter);
+        this.notificationService = notificationService;
 
         // Part of the pattern can be configured in IndexSetConfig. If set we use the indexMatchPattern from the config.
         final String indexPattern = isNullOrEmpty(config.indexMatchPattern())
@@ -120,7 +128,7 @@ public class MongoIndexSet implements IndexSet {
         // also allow restore archives to be returned
         final List<String> result = indexNames.stream()
                 .filter(this::isManagedIndex)
-                .collect(Collectors.toList());
+                .toList();
 
         return result.toArray(new String[result.size()]);
     }
@@ -180,10 +188,6 @@ public class MongoIndexSet implements IndexSet {
         } catch (NumberFormatException e) {
             return Optional.empty();
         }
-    }
-
-    public static boolean indexHasWarmInfix(String indexName) {
-        return indexName.contains("_" + WARM_INDEX_INFIX);
     }
 
     private int indexPrefixLength(String indexName) {
@@ -297,7 +301,17 @@ public class MongoIndexSet implements IndexSet {
         // Create new index.
         LOG.info("Creating target index <{}>.", newTarget);
         if (!indices.create(newTarget, this)) {
-            throw new RuntimeException("Could not create new target index <" + newTarget + ">.");
+            String title = "Error rotating index set";
+            String errorMsg = f("Could not create new target index <%s>.", newTarget);
+            notificationService.publishIfFirst(
+                    notificationService.build()
+                            .addType(Notification.Type.GENERIC)
+                            .addSeverity(Notification.Severity.URGENT)
+                            .addTimestamp(DateTime.now(DateTimeZone.UTC))
+                            .addNode(nodeId.getNodeId())
+                            .addDetail("title", title)
+                            .addDetail("description", errorMsg));
+            throw new RuntimeException(errorMsg);
         }
 
         LOG.info("Waiting for allocation of index <{}>.", newTarget);
@@ -400,6 +414,14 @@ public class MongoIndexSet implements IndexSet {
     @Override
     public String toString() {
         return "MongoIndexSet{" + "config=" + config + '}';
+    }
+
+    public static String hotIndexName(String indexName) {
+        return indexName.replace(WARM_INDEX_INFIX_WITH_SEPARATOR, SEPARATOR);
+    }
+
+    public static boolean indexHasWarmInfix(String indexName) {
+        return indexName.contains(WARM_INDEX_INFIX_WITH_SEPARATOR);
     }
 
     public interface Factory {
